examples/test/testpolicy8184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8184
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key45: value11
      key17: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value23
          key23: value6
          key1: value29
      podSelector:
        matchLabels:
          key5: value6
